# ark-ar1cs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  TODOS.md  rustfmt.toml
.github/workflows/: ci.yml
bench-harness/node/: package.json  run-bench.mjs
bench-results/: .gitignore  01-synthesis-mode-delta.md  03-decision-gate.md  README.md  SUMMARY.md
crates/ark-ar1cs/: Cargo.toml
crates/ark-ar1cs-build/: Cargo.toml
crates/ark-ar1cs-build/src/: exporter.rs  lib.rs  setup.rs
crates/ark-ar1cs-examples/: Cargo.toml
crates/ark-ar1cs-examples/examples/: 01_export_setup_prove_verify.rs  02_round_trip_arzkey.rs  03_cross_curve.rs  04_wrap_pk_into_arzkey.rs
crates/ark-ar1cs-exporter/: Cargo.toml
crates/ark-ar1cs-exporter/src/: lib.rs
crates/ark-ar1cs-exporter/tests/: e2e_test.rs
crates/ark-ar1cs-format/: Cargo.toml  README.md
crates/ark-ar1cs-format/src/: compat.rs  error.rs  exporter.rs  header.rs  importer.rs  lib.rs  matrix.rs  schema.rs
crates/ark-ar1cs-format/src/test_fixtures/: mod.rs  proptest_gen.rs
crates/ark-ar1cs-format/tests/: canonical_sort.rs  export_round_trip.rs  import.rs  proptest_generator.rs  proptest_round_trip.rs  round_trip.rs
crates/ark-ar1cs-importer/: Cargo.toml
crates/ark-ar1cs-importer/src/: lib.rs
crates/ark-ar1cs-importer/tests/: import_test.rs
crates/ark-ar1cs-prover/: Cargo.toml  README.md
crates/ark-ar1cs-prover/src/: bind.rs  error.rs  lib.rs  preflight.rs  verifier.rs
crates/ark-ar1cs-prover/tests/: bind_check.rs  cross_curve.rs  e2e.rs  preflight.rs  proptest_prove_verify.rs
crates/ark-ar1cs-prover/tests/common/: mod.rs
crates/ark-ar1cs-test-fixtures/: Cargo.toml
crates/ark-ar1cs-test-fixtures/src/: lib.rs  proptest_gen.rs
crates/ark-ar1cs-test-fixtures/tests/: proptest_generator.rs
crates/ark-ar1cs-wasm-witness/: Cargo.toml
crates/ark-ar1cs-wasm-witness/benches/: native_2pow20.rs
crates/ark-ar1cs-wasm-witness/examples/: encode_input.rs  native_dump_arwtns.rs  native_mem_2pow20.rs
crates/ark-ar1cs-wasm-witness/src/: abi.rs  error.rs  lib.rs  macros.rs  mock.rs  packed.rs
crates/ark-ar1cs-wasm-witness/tests/fixtures/large-witness-fixture/: Cargo.toml
crates/ark-ar1cs-wasm-witness/tests/fixtures/large-witness-fixture/src/: lib.rs
crates/ark-ar1cs-wtns/: Cargo.toml  README.md
crates/ark-ar1cs-wtns/src/: error.rs  header.rs  lib.rs  schema.rs
crates/ark-ar1cs-wtns/tests/: negative.rs  proptest_round_trip.rs  round_trip.rs
crates/ark-ar1cs-zkey/: Cargo.toml  README.md
crates/ark-ar1cs-zkey/src/: error.rs  header.rs  lib.rs  schema.rs
crates/ark-ar1cs-zkey/tests/: negative.rs  partial_read.rs  round_trip.rs
crates/ark-ar1cs/examples/: 01_export_setup_prove_verify.rs  03_cross_curve.rs  04_wrap_pk_into_arzkey.rs
crates/ark-ar1cs/src/: lib.rs  preflight.rs  prove.rs  prove_error.rs  verifier.rs  witness.rs
crates/ark-ar1cs/src/arzkey/: error.rs  header.rs  mod.rs  schema.rs
crates/ark-ar1cs/src/format/: compat.rs  error.rs  exporter.rs  header.rs  importer.rs  matrix.rs  mod.rs  schema.rs
crates/ark-ar1cs/src/format/test_fixtures/: mod.rs  proptest_gen.rs
crates/ark-ar1cs/tests/: arcs_file_too_large.rs  arzkey_negative.rs  arzkey_partial_read.rs  arzkey_round_trip.rs  format_canonical_sort.rs  format_error_snapshot.rs  format_export_round_trip.rs  format_import.rs  format_proptest_generator.rs  format_proptest_round_trip.rs  format_round_trip.rs  prove_cross_curve.rs  prove_e2e.rs  prove_preflight.rs  prove_proptest_prove_verify.rs  witness_preflight.rs
crates/ark-ar1cs/tests/common/: mod.rs
scripts/: verify-api-shape.sh  verify-removal-boundary.sh
