[workspace]
members = [
    "crates/ark-ar1cs",
    "crates/ark-ar1cs-build",
]
resolver = "2"

[workspace.package]
edition      = "2021"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/snp-labs/ark-ar1cs"
version      = "0.1.0"
rust-version = "1.81"

[workspace.dependencies]
# arkworks 0.6 family. Default features stay on, mirroring the pre-redesign
# per-member specs (`ark-* = "0.6"`). Member dev-deps that need `std` keep
# their `features = ["std"]` override as before.
ark-bls12-381 = { version = "0.6" }
ark-bn254     = { version = "0.6" }
ark-ec        = { version = "0.6" }
ark-ff        = { version = "0.6" }
ark-groth16   = { version = "0.6" }
ark-relations = { version = "0.6" }
ark-serialize = { version = "0.6" }
ark-std       = { version = "0.6" }

blake3        = { version = "1" }
proptest      = { version = "1" }
rand          = { version = "0.8" }
tempfile      = { version = "3" }
thiserror     = { version = "2" }

[workspace.lints.rust]
# Workspace-level `unsafe_code = "deny"` replaces per-crate `#![deny(unsafe_code)]`.
unsafe_code      = "deny"
unused_must_use  = "deny"
unreachable_pub  = "warn"

[workspace.lints.clippy]
# `unwrap_used` is promoted to `deny` (Stream 2 PR 2.3). `expect_used` is
# intentionally NOT enabled here — under CI's `cargo clippy --all -- -D warnings`,
# `warn` is escalated to error and every `.expect("...")` call is rejected
# regardless of message. The 6 production `expect()` sites
# (`compat.rs`'s pop-after-validate, infallible `Vec` write, etc.) carry
# invariant messages that human review verifies; clippy can't tell those
# apart from accidental panics, so the lint adds friction without value.
# Test code allows panic-prone macros via `#![cfg_attr(test, allow(...))]`
# in each `lib.rs` and `#![allow(...)]` at the top of each integration test.
unwrap_used      = "deny"
panic            = "warn"
todo             = "warn"
dbg_macro        = "warn"
