[package]
name = "ark-ar1cs-examples"
version = "0.1.0"
edition = "2021"
description = "Runnable end-to-end workflow examples for the ark-ar1cs core crates"
license = "MIT OR Apache-2.0"
repository = "https://github.com/snp-labs/ark-ar1cs"
publish = false

[dependencies]
ark-ar1cs-format = { path = "../ark-ar1cs-format" }
ark-ar1cs-zkey = { path = "../ark-ar1cs-zkey" }
ark-ar1cs-wtns = { path = "../ark-ar1cs-wtns" }
ark-ar1cs-prover = { path = "../ark-ar1cs-prover" }
ark-bls12-381 = "0.5.0"
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = { version = "0.5.0", features = ["std"] }
ark-groth16 = "0.5.0"
ark-relations = "0.5.1"
ark-std = "0.5.0"
rand = "0.8"
