[package]
name = "ark-ar1cs-examples"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Runnable end-to-end workflow examples for the ark-ar1cs core crates"
publish = false

[dependencies]
ark-ar1cs-format = { path = "../ark-ar1cs-format" }
ark-ar1cs-zkey   = { path = "../ark-ar1cs-zkey" }
ark-ar1cs-wtns   = { path = "../ark-ar1cs-wtns" }
ark-ar1cs-prover = { path = "../ark-ar1cs-prover" }
ark-bls12-381    = { workspace = true }
ark-bn254        = { workspace = true }
ark-ec           = { workspace = true }
ark-ff           = { workspace = true, features = ["std"] }
ark-groth16      = { workspace = true }
ark-relations    = { workspace = true }
ark-serialize    = { workspace = true }
ark-std          = { workspace = true }
rand             = { workspace = true }
