[package]
name = "ark-ar1cs-exporter"
version = "0.1.0"
edition = "2021"
description = "Export arkworks R1CS constraint systems to the portable .ar1cs format"
license = "MIT OR Apache-2.0"
repository = "https://github.com/leejw9357/ark-ar1cs"
keywords = ["zkp", "groth16", "arkworks", "r1cs"]
categories = ["cryptography"]

[dependencies]
ark-ar1cs-format = { path = "../ark-ar1cs-format" }
ark-ff = "0.5.0"
ark-relations = "0.5.1"

[dev-dependencies]
ark-ar1cs-format = { path = "../ark-ar1cs-format" }
ark-ar1cs-importer = { path = "../ark-ar1cs-importer" }
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-relations = "0.5.1"
ark-std = "0.5.0"
rand = "0.8"
