[package]
name = "ark-ar1cs-format"
version = "0.1.0"
edition = "2021"
description = "Portable Groth16 constraint system format for arkworks circuits"
license = "MIT OR Apache-2.0"

[dependencies]
ark-serialize = "0.5.0"
ark-ff = "0.5.0"
ark-relations = "0.5.1"
ark-std = "0.5.0"
blake3 = "1"

[dev-dependencies]
ark-ar1cs-test-fixtures = { path = "../ark-ar1cs-test-fixtures" }
ark-bn254 = "0.5.0"
ark-bls12-381 = "0.5.0"
ark-ff = { version = "0.5.0", features = ["std"] }
