[package]
name = "ark-ar1cs-format"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Portable Groth16 constraint system format for arkworks circuits"

[features]
default = []
# Exposes the `test_fixtures` module: `make_test_matrices()` (BN254) and the
# `arb_matrices_with_assignment` proptest strategy. The proptest submodule is
# itself `cfg(not(target_arch = "wasm32"))`-gated so wasm builds with this
# feature on still skip proptest's non-wasm crates.
test-fixtures = ["dep:proptest", "dep:ark-bn254"]

[dependencies]
ark-serialize = { workspace = true }
ark-ff        = { workspace = true }
ark-relations = { workspace = true }
ark-std       = { workspace = true }
blake3        = { workspace = true }
# Optional — only when `test-fixtures` is enabled (used by
# `test_fixtures::make_test_matrices`).
ark-bn254     = { workspace = true, optional = true }

# Native-only: keeps `cargo build --target wasm32-unknown-unknown
# -p ark-ar1cs-format --no-default-features` clean (proptest pulls in `regex`,
# `rand_chacha`, `rusty-fork`, etc. which don't all build on wasm32). The
# proptest module is itself `cfg(not(target_arch = "wasm32"))`-gated.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
proptest = { workspace = true, optional = true }

[dev-dependencies]
# Self-cycle so `cargo test -p ark-ar1cs-format` activates the test-fixtures
# feature on the lib for integration tests that reference `test_fixtures::*`.
ark-ar1cs-format = { path = ".", features = ["test-fixtures"] }
ark-bn254     = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-ec        = { workspace = true }
ark-ff        = { workspace = true, features = ["std"] }
ark-groth16   = { workspace = true }
proptest      = { workspace = true }
rand          = { workspace = true }
