[package]
name = "ark-ar1cs-importer"
version = "0.1.0"
edition = "2021"
description = "Import .ar1cs files as arkworks ConstraintSynthesizer for Groth16 trusted setup"
license = "MIT OR Apache-2.0"
repository = "https://github.com/leejw9357/ark-ar1cs"
keywords = ["zkp", "groth16", "arkworks", "r1cs"]
categories = ["cryptography"]

[dependencies]
ark-ar1cs-format = { path = "../ark-ar1cs-format" }
ark-ff = "0.5.0"
ark-relations = "0.5.1"

[dev-dependencies]
ark-ar1cs-format = { path = "../ark-ar1cs-format" }
ark-ar1cs-test-fixtures = { path = "../ark-ar1cs-test-fixtures" }
ark-bn254 = "0.5.0"
