[package]
name = "ark-ar1cs-prover"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Circuit-agnostic Groth16 prover/verifier consuming .arzkey + .arwtns artifacts"
categories = ["cryptography"]
keywords = ["zk-snark", "groth16", "arkworks", "r1cs"]

[dependencies]
ark-ar1cs-format = { path = "../ark-ar1cs-format" }
ark-ar1cs-zkey   = { path = "../ark-ar1cs-zkey" }
ark-ar1cs-wtns   = { path = "../ark-ar1cs-wtns" }
ark-ec           = { workspace = true }
ark-ff           = { workspace = true }
ark-groth16      = { workspace = true }
ark-relations    = { workspace = true }
ark-serialize    = { workspace = true }
ark-std          = { workspace = true }
thiserror        = { workspace = true }

[dev-dependencies]
ark-ar1cs-format = { path = "../ark-ar1cs-format", features = ["test-fixtures"] }
ark-bls12-381    = { workspace = true }
ark-bn254        = { workspace = true }
ark-ff           = { workspace = true, features = ["std"] }
proptest         = { workspace = true }
rand             = { workspace = true }

[lints]
workspace = true
