[package]
name = "ark-ar1cs-test-fixtures"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
ark-relations = "0.5.1"

# Native-only: keeps `cargo build --target wasm32-unknown-unknown
# -p ark-ar1cs-test-fixtures` clean (proptest pulls in `regex`, `rand_chacha`,
# `rusty-fork`, etc. which don't all build on wasm32). The proptest generator
# module is itself `cfg(not(target_arch = "wasm32"))`-gated; downstream crates
# that pull in test-fixtures via dev-dependencies only consume it on native
# `cargo test` runs.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
proptest = "1"
