[package]
name = "ark-ar1cs-wasm-witness"
version = "0.1.0"
edition = "2021"
description = "Generic ConstraintSynthesizer-to-.arwtns witness framework with wasm export macro"
license = "MIT OR Apache-2.0"
repository = "https://github.com/snp-labs/ark-ar1cs"
categories = ["cryptography", "wasm"]
keywords = ["zk-snark", "groth16", "arkworks", "r1cs", "wasm"]

[dependencies]
ark-ar1cs-format = { path = "../ark-ar1cs-format" }
ark-ar1cs-wtns = { path = "../ark-ar1cs-wtns" }
ark-ff = "0.5.0"
ark-relations = "0.5.1"
postcard = { version = "1", default-features = false, features = ["alloc"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
thiserror = "2"

[dev-dependencies]
ark-bn254 = "0.5.0"
ark-ff = { version = "0.5.0", features = ["std"] }
serde = { version = "1", features = ["derive"] }
