[package]
name = "ark-ar1cs-wasm-witness"
version = "0.1.0"
edition = "2021"
description = "Generic ConstraintSynthesizer-to-.arwtns witness framework with wasm export macro"
license = "MIT OR Apache-2.0"
repository = "https://github.com/snp-labs/ark-ar1cs"
categories = ["cryptography", "wasm"]
keywords = ["zk-snark", "groth16", "arkworks", "r1cs", "wasm"]

[features]
# Exposes `pub mod mock` (small `MockCircuit` + 2^20-class `LargeMockCircuit`
# fixtures + their `WitnessGenerator` impls) to downstream test fixtures and
# the wasm32 smoke / benchmark crates. Pulls ark-bn254 as a non-dev dep so
# `cargo build -p some-fixture` (where this crate is a regular dependency,
# not a dev-dependency) still resolves the field type.
test-mock = ["dep:ark-bn254"]

[dependencies]
ark-ar1cs-format = { path = "../ark-ar1cs-format" }
ark-ar1cs-wtns = { path = "../ark-ar1cs-wtns" }
ark-ff = "0.5.0"
ark-relations = "0.5.1"
postcard = { version = "1", default-features = false, features = ["alloc"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
thiserror = "2"
# Only pulled in when `test-mock` is enabled. Used by the `mock` module's
# concrete BN254 fixtures.
ark-bn254 = { version = "0.5.0", optional = true }

[dev-dependencies]
ark-bn254 = "0.5.0"
ark-ff = { version = "0.5.0", features = ["std"] }
serde = { version = "1", features = ["derive"] }
# Bench / measurement deps (Phase 2 of the 2^20 benchmark plan).
criterion = "0.5"
dhat = "0.3"

[[bench]]
name = "native_2pow20"
harness = false
required-features = ["test-mock"]

[[example]]
name = "native_mem_2pow20"
required-features = ["test-mock"]

[[example]]
name = "encode_input"
required-features = ["test-mock"]

[[example]]
name = "native_dump_arwtns"
required-features = ["test-mock"]
