[package]
name = "ark-ar1cs-wasm-witness"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Generic ConstraintSynthesizer-to-.arwtns witness framework with wasm export macro"
categories = ["cryptography", "wasm"]
keywords = ["zk-snark", "groth16", "arkworks", "r1cs", "wasm"]

[features]
# Exposes `pub mod mock` (small `MockCircuit` + 2^20-class `LargeMockCircuit`
# fixtures + their `WitnessGenerator` impls) to downstream test fixtures and
# the wasm32 smoke / benchmark crates. Pulls ark-bn254 as a non-dev dep so
# `cargo build -p some-fixture` (where this crate is a regular dependency,
# not a dev-dependency) still resolves the field type.
test-mock = ["dep:ark-bn254"]

[dependencies]
ark-ar1cs-format = { path = "../ark-ar1cs-format" }
ark-ar1cs-wtns   = { path = "../ark-ar1cs-wtns" }
ark-ff           = { workspace = true }
ark-relations    = { workspace = true }
postcard         = { workspace = true }
serde            = { workspace = true }
thiserror        = { workspace = true }
# Only pulled in when `test-mock` is enabled. Used by the `mock` module's
# concrete BN254 fixtures.
ark-bn254        = { workspace = true, optional = true }

[dev-dependencies]
ark-bn254 = { workspace = true }
ark-ff    = { workspace = true, features = ["std"] }
serde     = { workspace = true, features = ["derive"] }
# Bench / measurement deps (Phase 2 of the 2^20 benchmark plan). Not in
# [workspace.dependencies] — only this crate consumes them.
criterion = "0.5"
dhat      = "0.3"

[[bench]]
name = "native_2pow20"
harness = false
required-features = ["test-mock"]

[[example]]
name = "native_mem_2pow20"
required-features = ["test-mock"]

[[example]]
name = "encode_input"
required-features = ["test-mock"]

[[example]]
name = "native_dump_arwtns"
required-features = ["test-mock"]
