[package]
name = "ark-ar1cs-wtns"
version = "0.1.0"
edition = "2021"
description = "Portable witness format (.arwtns) for arkworks Groth16 circuits"
license = "MIT OR Apache-2.0"
repository = "https://github.com/snp-labs/ark-ar1cs"
categories = ["cryptography"]
keywords = ["zk-snark", "groth16", "arkworks", "r1cs"]

[dependencies]
ark-ar1cs-format = { path = "../ark-ar1cs-format" }
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
blake3 = "1"
thiserror = "2"

[dev-dependencies]
ark-ar1cs-test-fixtures = { path = "../ark-ar1cs-test-fixtures" }
ark-bn254 = "0.5.0"
ark-ff = { version = "0.5.0", features = ["std"] }
blake3 = "1"
proptest = "1"
