[package]
name = "ark-ar1cs-wtns"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Portable witness format (.arwtns) for arkworks Groth16 circuits"
categories = ["cryptography"]
keywords = ["zk-snark", "groth16", "arkworks", "r1cs"]

[dependencies]
ark-ar1cs-format = { path = "../ark-ar1cs-format" }
ark-ff           = { workspace = true }
ark-serialize    = { workspace = true }
blake3           = { workspace = true }
thiserror        = { workspace = true }

[dev-dependencies]
ark-ar1cs-format = { path = "../ark-ar1cs-format", features = ["test-fixtures"] }
ark-bn254        = { workspace = true }
ark-ff           = { workspace = true, features = ["std"] }
blake3           = { workspace = true }
proptest         = { workspace = true }
