[package]
name = "ark-ar1cs-zkey"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Portable Groth16 setup-output format (.arzkey) — matrices + VK + PK in one file"
categories = ["cryptography"]
keywords = ["zk-snark", "groth16", "arkworks", "r1cs"]

[features]
default = []
# Production fast-path: switch ArzkeyFile::read VK/PK deserialization to the
# `_unchecked` ark-serialize variants, skipping curve-point validation. Use
# only when the .arzkey provenance is trusted (signed manifest, in-band
# integrity check via blake3 trailer, or own setup ceremony output).
fast-prove = []

[dependencies]
ark-ar1cs-format = { path = "../ark-ar1cs-format" }
ark-ec           = { workspace = true }
ark-groth16      = { workspace = true }
ark-serialize    = { workspace = true }
blake3           = { workspace = true }
thiserror        = { workspace = true }

[dev-dependencies]
ark-bn254     = { workspace = true }
ark-ff        = { workspace = true, features = ["std"] }
ark-relations = { workspace = true }
ark-std       = { workspace = true }
blake3        = { workspace = true }
rand          = { workspace = true }
tempfile      = { workspace = true }

[lints]
workspace = true
