[package]
name = "ark-ar1cs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Circuit-agnostic Groth16 runtime: .ar1cs codec + prove primitive"
categories = ["cryptography"]
keywords = ["zk-snark", "groth16", "arkworks", "r1cs"]

[features]
default = []
# Exposes the `format::test_fixtures` module: `make_test_matrices()` (BN254)
# and the `arb_matrices_with_assignment` proptest strategy. The proptest
# submodule is itself `cfg(not(target_arch = "wasm32"))`-gated so wasm builds
# with this feature on still skip proptest's non-wasm crates.
test-fixtures = ["dep:proptest", "dep:ark-bn254"]

[dependencies]
ark-ec        = { workspace = true }
ark-ff        = { workspace = true }
ark-groth16   = { workspace = true }
ark-relations = { workspace = true }
ark-serialize = { workspace = true }
ark-std       = { workspace = true }
blake3        = { workspace = true }
thiserror     = { workspace = true }
# Optional — only when `test-fixtures` is enabled (used by
# `format::test_fixtures::make_test_matrices`).
ark-bn254     = { workspace = true, optional = true }

# Native-only: keeps `cargo build --target wasm32-unknown-unknown
# -p ark-ar1cs --no-default-features` clean (proptest pulls in `regex`,
# `rand_chacha`, `rusty-fork`, etc. which don't all build on wasm32). The
# proptest module is itself `cfg(not(target_arch = "wasm32"))`-gated.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
proptest = { workspace = true, optional = true }

[dev-dependencies]
# Self-cycle so `cargo test -p ark-ar1cs` activates the test-fixtures
# feature on the lib for integration tests that reference
# `format::test_fixtures::*`.
ark-ar1cs       = { path = ".", features = ["test-fixtures"] }
# Build-time toolchain used by integration tests (export_circuit).
ark-ar1cs-build = { path = "../ark-ar1cs-build" }
ark-bls12-381   = { workspace = true }
ark-bn254     = { workspace = true }
ark-ec        = { workspace = true }
ark-ff        = { workspace = true, features = ["std"] }
ark-groth16   = { workspace = true }
ark-relations = { workspace = true }
ark-std       = { workspace = true }
blake3        = { workspace = true }
proptest      = { workspace = true }
rand          = { workspace = true }

[lints]
workspace = true
