[package]
name = "large-witness-fixture"
version = "0.0.0"
edition = "2021"
publish = false
description = "wasm32 fixture: 2^20-constraint chained-squaring circuit, used by wasm-witness benchmarks"

[lib]
crate-type = ["cdylib"]

[dependencies]
ark-ar1cs-wasm-witness = { path = "../../..", features = ["test-mock"] }
ark-ar1cs-format = { path = "../../../../ark-ar1cs-format" }
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
ark-relations = "0.5.1"
serde = { version = "1", default-features = false, features = ["derive"] }
postcard = { version = "1", default-features = false, features = ["alloc"] }

# Workspace ignores per-member [profile.*] sections; release tuning (LTO,
# codegen-units, opt-level, strip) lives in the workspace root Cargo.toml
# or is applied via `wasm-opt` post-processing. Per benchmark plan D5,
# the wasm-opt experiment is deferred until baseline numbers are in.
