[package]
name = "large-witness-fixture"
version = "0.0.0"
edition.workspace = true
publish = false
description = "wasm32 fixture: 2^20-constraint chained-squaring circuit, used by wasm-witness benchmarks"

[lib]
crate-type = ["cdylib"]

[dependencies]
ark-ar1cs-wasm-witness = { path = "../../..", features = ["test-mock"] }
ark-ar1cs-format       = { path = "../../../../ark-ar1cs-format" }
ark-bn254              = { workspace = true }
ark-ff                 = { workspace = true }
ark-relations          = { workspace = true }
serde                  = { workspace = true, features = ["derive"] }
postcard               = { workspace = true }

# Workspace ignores per-member [profile.*] sections; release tuning (LTO,
# codegen-units, opt-level, strip) lives in the workspace root Cargo.toml
# or is applied via `wasm-opt` post-processing. Per benchmark plan D5,
# the wasm-opt experiment is deferred until baseline numbers are in.
